# factordb-rust

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: factor.rs  lib.rs  main.rs  number.rs  utils.rs
