[package]
name = "factordb"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for FactorDB API"
homepage = "https://github.com/megascrapper/factordb-rust"
repository = "https://github.com/megascrapper/factordb-rust"
readme = "README.md"
categories = ["api-bindings", "mathematics", "command-line-utilities"]
keywords = ["factordb", "prime-numbers", "factorization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
thiserror = "1.0.30"
clap = { version = "3.1.6", features = ["derive"] }
ansi_term = "0.12.1"