[package]
name = "factordb"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust wrapper for FactorDB API"
homepage = "https://github.com/megascrapper/factordb-rust"
repository = "https://github.com/megascrapper/factordb-rust"
readme = "README.md"
categories = ["api-bindings", "mathematics", "command-line-utilities"]
keywords = ["factordb", "prime-numbers", "factorization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11.10", features = ["json"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
thiserror = "1.0.30"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"

# CLI dependencies
clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { version = "0.11.1", optional = true }
human-panic = { version = "1.2.3", optional = true }

[features]
blocking = ["reqwest/blocking"]
cli = ["clap", "env_logger", "human-panic", "blocking"]

[[bin]]
name = "factordb"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
